# rabbitmq-aio-pika

./: README.md  docker-compose.yml  pyproject.toml
codes/consumers/: base.py  simple.py
codes/models/: message.py
codes/producers/: simple.py
codes/queues/rabbitmq/: core.py
scripts/: consume.py  produce.py
