[project]
name = "rabbitmq-aio-pika"
version = "0.1.0"
description = "Handson RabbitMQ with aio-pika"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aio-pika>=9.5.4",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
]
